# project-env-setup

./: .dockerignore  Makefile  docker-compose.yaml  pyproject.toml  setup,cfg  setup.cfg
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  (+212 more)
.mypy_cache/3.10/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  (+51 more)
docker/: Dockerfile
donedevil/: main.py
shubhu1026/: entrypoint.py
shubhu1026/config_schemas/: config_schema.py
shubhu1026/configs/: config.yaml
shubhu1026/utils/: config_utils.py
(+576 files in other folders)
